--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -1,1 +1,15 @@
-name: Testing githubACtions
+name: Testing Mayank Github Actions
+
+on: 
+    push: 
+
+jobs: 
+    first: 
+        name: List all files
+        runs-on:  ubuntu-latest
+        steps: 
+        - name: Listing All Files
+          run:  ls
+        - name: Reading Index file
+          run: cat index.html
+
