Using Shell Script

--- a/.github/workflows/asciiiartwork.yaml
+++ b/.github/workflows/asciiiartwork.yaml
@@ -1,10 +1,10 @@
 name: Artwork
 
-on: 
     push: 
         branches: 
             - main
-    workflow_dispatch: 
+    workflow_dispatch
+on: : 
 
 jobs: 
     aertwork_installation: 
