--- a/.github/workflows/multi-jobs.yaml
+++ b/.github/workflows/multi-jobs.yaml
@@ -10,11 +10,18 @@ jobs:
               run: sudo apt-get install cowsay -y
             - name: Running Cowsay
               run: cowsay  -f dragon  "See the dragon" >>  cat.txt 
+            - uses: actions/upload-artifact@v4
+              with:
+                 name: mycatfile
+                 path: cat.txt
 
     deploy_job_2: 
         needs: build_job_1
         runs-on: ubuntu-latest
         steps: 
+            - uses: actions/download-artifact@v4
+              with:
+                 name: mycatfile
             - name: Read the file Cat.txt
               run: cat cat.txt
             - name: finding a word
